Validate received data with json schema

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -4,6 +4,9 @@ FROM python:3.10-slim-buster
 
 WORKDIR /app
 
+RUN pip3 install jsonschema
+
 COPY server.py server.py
+COPY data.schema.json data.schema.json
 
 CMD [ "python3", "server.py" ]
