Use CI_CUSTOM_IMAGE_NAME instead as CI_PROJECT_NAME is defined by GitLab directly

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,4 +6,4 @@ server:
   extends:
     - .kaniko-monorepo
   variables:
-    CI_PROJECT_NAME: gnome-info-collect-server
+    CI_CUSTOM_IMAGE_NAME: gnome-info-collect-server
